Finished adding IClientUser bindings
Finished adding most of the IClientUser bindings.
I need to make a Bootstrapper of sorts that makes sure we have the
correct steamclient.so version and such before further testing can be
made

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -18,6 +18,7 @@ target_sources(Steam
     PUBLIC
         $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/Steam.cpp>
         $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include/Steam.hpp>
+        $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include/Imported/SteamIPAddress.hpp>
 )
 
 target_include_directories(Steam
